--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/HarryTran2811/NodeJS_Learning.git"
   },
-  "author": "",
+  "author": "HarryTran2811",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/HarryTran2811/NodeJS_Learning/issues"
